--- a/example-site/index.html
+++ b/example-site/index.html
@@ -10,5 +10,6 @@
     <h1>Hello, World!</h1>
     <hr />
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quia minima, distinctio consectetur corrupti corporis sint voluptatum assumenda amet alias optio deserunt. Minus laboriosam mollitia quae beatae. Corrupti, ex eaque?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium soluta nemo et molestiae, nisi nostrum enim optio rem expedita fuga quae doloribus, cupiditate quos officiis quod quia in ipsam esse.</p>
 </body>
 </html>
