I'm just creating the footer from GitHub/Desktop

--- a/example-site/index.html
+++ b/example-site/index.html
@@ -12,4 +12,5 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quia minima, distinctio consectetur corrupti corporis sint voluptatum assumenda amet alias optio deserunt. Minus laboriosam mollitia quae beatae. Corrupti, ex eaque?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium soluta nemo et molestiae, nisi nostrum enim optio rem expedita fuga quae doloribus, cupiditate quos officiis quod quia in ipsam esse.</p>
 </body>
+<footer>I'm just creating the footer</footer>
 </html>
